# live_ai_agent

./: .env.example  .replit  README.md  pyproject.toml
src/solana_agent_agentipy/: crew.py  main.py
src/solana_agent_agentipy/config/: agents.yaml  tasks.yaml
src/solana_agent_agentipy/tools/: custom_tool.py
